augur-cli/crates/augur-core/tests/compile_fail/cases/cf_003_task_runner_legacy_direct_multi_step_dispatch_absent.tests.rs
use augur_core::actors::orchestrator::OrchestratorContext;

fn main() {
    let ctx = OrchestratorContext::new();
    let _ = ctx.direct_multi_step_dispatch();
}
